tests/snapshots/tbir__tlm_target_thread_if_dump_ir.snap
---
source: tests/tbir.rs
expression: "format!(\"{prog}\")"
---
tb-ir program
  testbench tb0 TlmTargetThreadIfTb { dut: TlmReadInitiatorPair } bus mem=TlmMemBus[read(addr)->r]
  test TlmTargetThreadIfTest tb=tb0 run=fn1 check=-
  transactor x0 TlmMemTarget bound to TlmMemBus
    state read_count = 0
    state prep_acc = 0
    target thread bus.read(1 arg) -> ret = fn0

fn fn0 TlmMemTarget_target_read [kind=TransactorBody(x0)]
  params:
    addr : uint<8>
  locals:
    %0 addr : uint<8>
    %1 __ret : unknown
    %2 req_seq : uint<32>
    %3 i : unknown
  ret = %__ret
  entry = b0

  b0:
    Assign(%req_seq, target.read_count)
    TransactorStateWrite(target.read_count, (target.read_count + 1))
    TransactorStateWrite(target.prep_acc, 0)
    Assign(%i, 0)
    -> Jump(b1)

  b1:
    -> Branch((%i <= 3), b2, b4)

  b2:
    TransactorStateWrite(target.prep_acc, ((target.prep_acc + %addr) + %i))
    -> Jump(b3)

  b3:
    Assign(%i, (%i + 1))
    -> Jump(b1)

  b4:
    -> WaitCycles(1, b5)

  b5:
    -> Branch((%addr < 8), b6, b7)

  b6:
    Assign(%__ret, (((256 + %addr) + %req_seq) + target.prep_acc))
    -> Return

  b7:
    Assign(%__ret, (((512 + %addr) + %req_seq) + target.prep_acc))
    -> Return

fn fn1 run_TlmTargetThreadIfTest [kind=Run, owner=tb0]
  locals:
    %0 __t0 : unknown
  entry = b0

  b0:
    DutWrite(dut.rst, 1)
    -> WaitCycles(2, b1)

  b1:
    DutWrite(dut.rst, 0)
    Assign(%__t0, 80)
    -> WaitUntilTimeout { (dut.done == 1) [single], cycles: %__t0, fire: b2, timeout: b3 }

  b2:
    AssertCheck { cond: (dut.result0 == 287), on_fail: "first target TLM response mismatch got=0x%08llx, expected 0x0000011f", dut.result0 }
    AssertCheck { cond: (dut.result1 == 579), on_fail: "second target TLM response mismatch got=0x%08llx, expected 0x00000243", dut.result1 }
    AssertCheck { cond: (target.read_count == 2), on_fail: "target TLM read_count mismatch got=%lld, expected 2", target.read_count }
    AssertCheck { cond: (target.prep_acc == 54), on_fail: "target TLM prep_acc mismatch got=%lld, expected 54", target.prep_acc }
    Log(info, "PASS: HARC target-side TLM thread loop-prepared response state")
    -> Return

  b3:
    FailDiag { "DUT initiator did not receive both HARC target responses" }
    FailDiag { unless: (dut.done == 1), "  not yet true: dut.done == 1" }
    -> Jump(b2)
