tests/snapshots/tbir__tlm_target_thread_if_emitted_cpp.snap
---
source: tests/tbir.rs
expression: "emit_fixture_cpp(\"tlm_target_thread_if_test.harc\")"
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: TlmTargetThreadIfTest

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VTlmReadInitiatorPair.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

static harc_rt::random::HarcRng harc_rng;
static inline uint64_t harc_rng_next() {
    return harc_rng.next();
}

struct TlmTargetThreadIfTb {
    VTlmReadInitiatorPair* dut = nullptr;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct HarcTestContext {
    VTlmReadInitiatorPair* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_TlmTargetThreadIfTest(int argc, char** argv) {
    Verilated::commandArgs(argc, argv);
    HarcTestContext ctx;
    ctx.dut = new VTlmReadInitiatorPair;
    auto*& dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto*& tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "TlmReadInitiatorPair", "TlmTargetThreadIfTest", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    auto tick = [&]() {
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    TlmTargetThreadIfTb _tb;
    struct _TlmMemTarget_target_state {
        uint64_t read_count = 0;
        uint64_t prep_acc = 0;
        uint64_t _last_in_cycle = 0;
        uint64_t _last_out_cycle = 0;
    } target;
    harc_rt::ThreadSlot _target_read_target_slot;
    sched.slots.push_back(&_target_read_target_slot);
    _target_read_target_slot.thread = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        dut->mem_read_req_ready = 0;
        dut->mem_read_rsp_valid = 0;
        while (true) {
            dut->mem_read_req_ready = 1;
            co_await harc_rt::wait_until(_slot, [&]{ return dut->mem_read_req_valid && dut->mem_read_req_ready; });
            uint64_t addr = harc_rt::harc_read(dut->mem_read_addr);
            co_await harc_rt::wait_cycles(_slot, 1);
            dut->mem_read_req_ready = 0;
            target._last_in_cycle = (uint64_t)cycle_count;
            trace.tlm_call(cycle_count, "target", "bus", "read", "request", "target");
            { // TlmMemTarget_target_read (TB-IR responder loop-switch)
                uint64_t __ret = 0; (void)__ret;
                uint64_t req_seq = 0; (void)req_seq;
                uint64_t i = 0; (void)i;
                int __bb = 0;
                bool __done = false;
                while (!__done) {
                    switch (__bb) {
                    case 0: {
                        req_seq = target.read_count;
                        target.read_count = (target.read_count + 1);
                        target.prep_acc = 0;
                        i = 0;
                        __bb = 1;
                        break;
                    }
                    case 1: {
                        if ((i <= 3)) { __bb = 2; } else { __bb = 4; }
                        break;
                    }
                    case 2: {
                        target.prep_acc = ((target.prep_acc + addr) + i);
                        __bb = 3;
                        break;
                    }
                    case 3: {
                        i = (i + 1);
                        __bb = 1;
                        break;
                    }
                    case 4: {
                        co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                        __bb = 5;
                        break;
                    }
                    case 5: {
                        if ((addr < 8)) { __bb = 6; } else { __bb = 7; }
                        break;
                    }
                    case 6: {
                        __ret = (((256 + addr) + req_seq) + target.prep_acc);
                        __done = true;
                        break;
                    }
                    case 7: {
                        __ret = (((512 + addr) + req_seq) + target.prep_acc);
                        __done = true;
                        break;
                    }
                    default: __done = true; break;
                    }
                }
                harc_rt::harc_assign(dut->mem_read_rsp_data, __ret);
            }
            trace.tlm_call(cycle_count, "target", "bus", "read", "response", "target");
            dut->mem_read_rsp_valid = 1;
            if (!dut->mem_read_rsp_ready) co_await harc_rt::wait_until(_slot, [&]{ return dut->mem_read_rsp_ready; });
            co_await harc_rt::wait_cycles(_slot, 1);
            dut->mem_read_rsp_valid = 0;
            target._last_out_cycle = (uint64_t)cycle_count;
        }
        co_return;
    }(&_target_read_target_slot);
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    _run_slot.thread = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        _tb.dut = dut;
        { // run_TlmTargetThreadIfTest (TB-IR loop-switch)
            uint64_t __t0 = 0; (void)__t0;
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    harc_rt::harc_assign(dut->rst, 1);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(2));
                    __bb = 1;
                    break;
                }
                case 1: {
                    harc_rt::harc_assign(dut->rst, 0);
                    __t0 = 80;
                    int64_t _wu_budget = (int64_t)(__t0);
                    bool _wu_satisfied = co_await harc_rt::wait_until_timeout(_slot, [&]{ return (harc_rt::harc_read(dut->done) == 1); }, (uint32_t)_wu_budget);
                    if (_wu_satisfied) { __bb = 2; } else { ctx.errors++; __bb = 3; }
                    break;
                }
                case 2: {
                    if (!((harc_rt::harc_read(dut->result0) == 287))) {
                        sim_log_line("FAIL", "first target TLM response mismatch got=0x%08llx, expected 0x0000011f", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->result0)));
                        ctx.errors++;
                    }
                    if (!((harc_rt::harc_read(dut->result1) == 579))) {
                        sim_log_line("FAIL", "second target TLM response mismatch got=0x%08llx, expected 0x00000243", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->result1)));
                        ctx.errors++;
                    }
                    if (!((target.read_count == 2))) {
                        sim_log_line("FAIL", "target TLM read_count mismatch got=%lld, expected 2", harc_rt::harc_printf_ll(target.read_count));
                        ctx.errors++;
                    }
                    if (!((target.prep_acc == 54))) {
                        sim_log_line("FAIL", "target TLM prep_acc mismatch got=%lld, expected 54", harc_rt::harc_printf_ll(target.prep_acc));
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "PASS: HARC target-side TLM thread loop-prepared response state");
                    __done = true;
                    break;
                }
                case 3: {
                    sim_log_line("FAIL", "DUT initiator did not receive both HARC target responses");
                    if (!((harc_rt::harc_read(dut->done) == 1))) {
                        sim_log_line("FAIL", "  not yet true: dut.done == 1");
                    }
                    __bb = 2;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    }(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    _harc_eval_negedge(dut);
    _harc_trace_dump_next("clk", (uint64_t)cycle_count);
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        sched.tick();
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    dut->final();
    HARC_RT_WRITE_COVERAGE(Verilated::threadContextp()->coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_TlmTargetThreadIfTest(argc, argv);
    if (std::strcmp(test_sel, "TlmTargetThreadIfTest") == 0) return run_TlmTargetThreadIfTest(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "TlmTargetThreadIfTest");
    return 1;
}
